--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 env:
   global:
     - CC_TEST_REPORTER_ID=bf364e7c58787a426dec9cedceaf26f5f3858e7091be5af5059f4186142a2de3
-    CONNECTION_STRING="postgresql://postgres:postgres@localhost:5432/testdb"
 matrix:
   include:
   - node_js: '12'
@@ -13,22 +12,10 @@ install:
 after_success: yarn coverage
 
 before_script:
-  - psql -c 'create database testdb;' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
   - yarn test
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESUL
-services:
-  - postgresql
-addons:
-  postgresql: "10"
-  apt:
-    packages:
-    - postgresql-10
-    - postgresql-client-10
-before_install:
-  - sudo cp /etc/postgresql/{9.6,10}/main/pg_hba.conf
-  - sudo /etc/init.d/postgresql restart
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
