--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
 matrix:
   include:
   - node_js: '12'
+
 cache:
   directories: [node_modules]
 install:
@@ -14,3 +15,16 @@ script:
   - yarn test
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+services:
+  - postgresql
+addons:
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+before_install:
+  - psql -c 'create database testdb;' -U postgres
+  - sudo cp /etc/postgresql/{9.6,10}/main/pg_hba.conf
+  - sudo /etc/init.d/postgresql restart
